fixed the comparison page layout issue

--- a/src/Components/ComparisonPage/ComparisonPage.css
+++ b/src/Components/ComparisonPage/ComparisonPage.css
@@ -18,8 +18,8 @@
   .video-wrapper {
     flex: 1;
     /* padding-left: 40px; */
-    margin-right: 30px;
-
+    margin-right: 100px;
+    width: min-content !important;
     position: relative;  /*  for centreing the titles */
   }
 
@@ -29,7 +29,9 @@
 
   .video-title {
     position: absolute;
-    top: 15px;
+    
+    /* prev top was 15px but -43px was having precedence dont knwo why temp soln below */
+    top: -20px !important;
     left: 50%;
     transform: translateX(-50%);
     background-color: rgba(0, 0, 0, 0.7);
@@ -41,6 +43,9 @@
   
   .button-container {
     text-align: center;
+
+    /* added this new style when 800*600 dimention introduced */
+    padding-top: 20px;
   }
   
   /* button {
